--- a/Views/Alunos/Create.cshtml
+++ b/Views/Alunos/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model AppMvcFuncional.Models.Aluno
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Cadastrar Novo Aluno";
 }
 
-<h1>Create</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>Aluno</h4>
+<h4>Preencha os dados corretamente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -42,16 +42,15 @@
                     <input class="form-check-input" asp-for="Ativo" /> @Html.DisplayNameFor(model => model.Ativo)
                 </label>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Enviar" class="btn btn-info" />
+                <a asp-action="Index" class="btn btn-warning">Voltar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
