--- a/Views/Alunos/Delete.cshtml
+++ b/Views/Alunos/Delete.cshtml
@@ -1,12 +1,14 @@
 ﻿@model AppMvcFuncional.Models.Aluno
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar aluno";
 }
 
-<h1>Delete</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4>Dados do aluno @Model.Nome</h4>
+
+<h3>Tem certeza que deseja excluir o aluno @Model.Nome?</h3>
 <div>
     <h4>Aluno</h4>
     <hr />
@@ -45,7 +47,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-warning">Voltar</a>
     </form>
 </div>
