--- a/Views/Alunos/Details.cshtml
+++ b/Views/Alunos/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AppMvcFuncional.Models.Aluno
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = $"Detalhes do aluno {Model.Nome}";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
     <h4>Aluno</h4>
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a>
+    <a class="btn btn-info" asp-action="Index">Voltar</a>
 </div>
